# rustc-demangle

./: cargo.sh  meson.build
crates/capi/: meson.build
tests/: meson.build  test.c
